Add support for VPX_I422 to the vpx video decoder

Bug: 849379
Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;luci.chromium.try:linux_optional_gpu_tests_rel;luci.chromium.try:mac_optional_gpu_tests_rel;luci.chromium.try:win_optional_gpu_tests_rel
Change-Id: Iab509858f50280fb8e0ab2f2e71dadc5d5fcc6d5
Reviewed-on: https://chromium-review.googlesource.com/1173429
Reviewed-by: Chrome Cunningham <chcunningham@chromium.org>
Commit-Queue: Ted Meyer <tmathmeyer@chromium.org>
Cr-Commit-Position: refs/heads/master@{#588154}
Former-commit-id: 890974dcfeead83a20a6c165286c7b18e79305c0