media/filters/vpx_video_decoder.cc
@@ -505,6 +505,10 @@ bool VpxVideoDecoder::CopyVpxImageToVideoFrame(
       codec_format = vpx_image_alpha ? PIXEL_FORMAT_I420A : PIXEL_FORMAT_I420;
       break;
 
+    case VPX_IMG_FMT_I422:
+      codec_format = PIXEL_FORMAT_I422;
+      break;
+
     case VPX_IMG_FMT_I444:
       codec_format = PIXEL_FORMAT_I444;
       break;
